<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xmlns="http://maven.apache.org/POM/4.0.0"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <artifactId>krisefikser</artifactId>
  <build>
    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <annotationProcessorPaths>
            <path>
              <artifactId>lombok</artifactId>
              <groupId>org.projectlombok</groupId>
            </path>
          </annotationProcessorPaths>
        </configuration>
        <groupId>org.apache.maven.plugins</groupId>
      </plugin>
      <plugin>
        <artifactId>jacoco-maven-plugin</artifactId>
        <executions>
          <execution>
            <goals>
              <goal>prepare-agent</goal>
            </goals>
          </execution>
          <execution>
            <goals>
              <goal>report</goal>
            </goals>
            <id>report</id>
            <phase>test</phase>
          </execution>
        </executions>
        <groupId>org.jacoco</groupId>
        <version>0.8.13</version>
      </plugin>
      <!-- Surefire plugin with fixed argLine for JaCoCo compatibility -->
      <plugin>
        <artifactId>maven-surefire-plugin</artifactId>
        <configuration>
          <argLine>@{argLine}
            -javaagent:"${settings.localRepository}/org/mockito/mockito-core/${mockito.version}/mockito-core-${mockito.version}.jar"
            -Xshare:off
          </argLine>
          <systemPropertyVariables>
            <spring.profiles.active>test</spring.profiles.active>
          </systemPropertyVariables>
        </configuration>
        <groupId>org.apache.maven.plugins</groupId>
      </plugin>
      <plugin>
        <artifactId>spring-boot-maven-plugin</artifactId>
        <configuration>
          <excludes>
            <exclude>
              <artifactId>lombok</artifactId>
              <groupId>org.projectlombok</groupId>
            </exclude>
          </excludes>
        </configuration>
        <groupId>org.springframework.boot</groupId>
      </plugin>
    </plugins>
  </build>
  <dependencies>
    <dependency>
      <artifactId>spring-boot-starter-data-jpa</artifactId>
      <groupId>org.springframework.boot</groupId>
    </dependency>
    <dependency>
      <artifactId>spring-boot-starter-security</artifactId>
      <groupId>org.springframework.boot</groupId>
    </dependency>
    <dependency>
      <artifactId>spring-boot-starter-validation</artifactId>
      <groupId>org.springframework.boot</groupId>
    </dependency>
    <dependency>
      <artifactId>spring-boot-starter-web</artifactId>
      <groupId>org.springframework.boot</groupId>
    </dependency>

    <dependency>
      <artifactId>spring-boot-devtools</artifactId>
      <groupId>org.springframework.boot</groupId>
      <optional>true</optional>
      <scope>runtime</scope>
    </dependency>
    <dependency>
      <artifactId>jjwt-api</artifactId>
      <groupId>io.jsonwebtoken</groupId>
      <version>${jjwt.version}</version>
    </dependency>
    <dependency>
      <artifactId>jjwt-impl</artifactId>
      <groupId>io.jsonwebtoken</groupId>
      <scope>runtime</scope>
      <version>${jjwt.version}</version>
    </dependency>
    <dependency>
      <artifactId>jjwt-jackson</artifactId>
      <groupId>io.jsonwebtoken</groupId>
      <scope>runtime</scope>
      <version>${jjwt.version}</version>
    </dependency>
    <dependency>
      <artifactId>mysql-connector-j</artifactId>
      <groupId>com.mysql</groupId>
      <scope>runtime</scope>
    </dependency>
    <dependency>
      <artifactId>lombok</artifactId>
      <groupId>org.projectlombok</groupId>
      <optional>true</optional>
    </dependency>
    <dependency>
      <artifactId>spring-boot-starter-test</artifactId>
      <groupId>org.springframework.boot</groupId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <artifactId>spring-security-test</artifactId>
      <groupId>org.springframework.security</groupId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <artifactId>jackson-datatype-jsr310</artifactId>
      <groupId>com.fasterxml.jackson.datatype</groupId>
    </dependency>
    <dependency>
      <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
      <groupId>org.springdoc</groupId>
      <version>2.8.5</version>
    </dependency>
    <dependency>
      <artifactId>javafaker</artifactId>
      <groupId>com.github.javafaker</groupId>
      <version>1.0.2</version>
    </dependency>

    <dependency>
      <artifactId>h2</artifactId>
      <groupId>com.h2database</groupId>
    </dependency>

    <dependency>
      <artifactId>spring-boot-starter-websocket</artifactId>
      <groupId>org.springframework.boot</groupId>
    </dependency>
  </dependencies>
  <description>backend</description>
  <developers>
    <developer/>
  </developers>
  <groupId>stud.ntnu</groupId>
  <licenses>
    <license/>
  </licenses>
  <modelVersion>4.0.0</modelVersion>
  <name>backend</name>
  <parent>
    <artifactId>spring-boot-starter-parent</artifactId>
    <groupId>org.springframework.boot</groupId>
    <relativePath/>
    <version>3.4.5</version> <!-- Using the latest version from your second POM -->
  </parent>
  <properties>
    <hibernate.version>6.2.7.Final</hibernate.version>
    <java.version>21</java.version>
    <jjwt.version>0.12.6</jjwt.version>
    <mockito.version>5.14.2</mockito.version>
  </properties>
  <scm>
    <connection/>
    <developerConnection/>
    <tag/>
    <url/>
  </scm>
  <url/>

  <version>0.0.1-SNAPSHOT</version>
</project>